--- a/_layouts/default.haml
+++ b/_layouts/default.haml
@@ -3,7 +3,7 @@
   %head
     %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-Type"}
     %title ben hoskings
-    %link{:href => "/stylesheets/styles.css", :media => 'screen', :type => 'text/css'}
+    %link{:href => "/stylesheets/styles.css", :media => 'screen', :rel => 'stylesheet', :type => 'text/css'}
 
 %body
   #page_container
