Cleaned up layout.

--- a/_layouts/default.haml
+++ b/_layouts/default.haml
@@ -7,9 +7,8 @@
 
 %body
   #page_container
-    %h1
+    %h1#page_heading
       %a{:href => '/'} ben hoskings
-      %a{:href => '/archives'} browse
 
     #main= content
 
