--- a/stylesheets/styles.sass
+++ b/stylesheets/styles.sass
@@ -41,6 +41,7 @@ ol.commentlist, ul.archive-month, #navigation ul
 
 p, ul li, div.item
   color: #aaa
+p, ul li, div.item, .post h2
   text-shadow: #000 1px 1px 1px
 
 p, .post ul, .comment ul, .post .meta
@@ -60,9 +61,7 @@ div.item, .comment .meta
   display: block
   float: left
 
-h2 a
-  display: block
-  float: left
+.post h2
   color: #197a9f
   font-weight: bold
 
@@ -172,7 +171,7 @@ input[type=text], textarea
   font-size: 8pt
   color: #555
 
-#page_heading a, #footer, #main p, .post li, .comment li, h2 a, div.item, .archive-month a, code pre, .post .meta, .posts-index .meta, .comment .meta, .errors
+#page_heading a, #footer, #main p, .post li, .comment li, .post h2, div.item, .archive-month a, code pre, .post .meta, .posts-index .meta, .comment .meta, .errors
   padding-left: 0.6em
   padding-right: 0.6em
 
