Added browse link. (url doesn't work yet)

--- a/_layouts/default.haml
+++ b/_layouts/default.haml
@@ -9,6 +9,8 @@
   #page_container
     %h1#page_heading
       %a{:href => '/'} ben hoskings
+    #navigation
+      %a{:href => '/archives'} browse
 
     #main= content
 
