Removed drop shadow from post titles.

--- a/stylesheets/styles.sass
+++ b/stylesheets/styles.sass
@@ -41,7 +41,7 @@ ol.commentlist, ul.archive-month, #navigation ul
 
 p, ul li, div.item
   color: #aaa
-p, ul li, div.item, .post h2
+p, ul li, div.item
   text-shadow: #000 1px 1px 1px
 
 p, .post ul, .comment ul, .post .meta
