Removed bullets from post index li elements.

--- a/stylesheets/styles.sass
+++ b/stylesheets/styles.sass
@@ -30,7 +30,10 @@ pre
 
 ul
   list-style: inside
-  list-style-type: square
+  li
+    list-style-type: square
+  &.years li
+    list-style-type: none
 
 ol.commentlist, ul.archive-month, #navigation ul
   list-style: none
