Style the links in the posts index the same as post titles.

--- a/stylesheets/styles.sass
+++ b/stylesheets/styles.sass
@@ -64,7 +64,7 @@ div.item, .comment .meta
   display: block
   float: left
 
-.post h2
+.post h2, ul.posts li a.title
   color: #197a9f
   font-weight: bold
 
