--- a/index.haml
+++ b/index.haml
@@ -2,22 +2,22 @@
 layout: default
 title: ben hoskings
 ---
- 
+
+- now = Time.now
+
 #home
-  %h1 posts
   %ul.years
     - site.posts.group_by {|p| p.date.year }.tap do |years|
       - years.keys.sort.reverse.each do |year|
         %li
-          %span.year= year
+          %span.year{:class => ('current' if Time.local(now.year) == Time.local(year))}= year
           %ul.months
             - years[year].group_by {|p| p.date.month }.tap do |months|
               - months.keys.sort.reverse.each do |month|
                 %li
-                  %span.month= month
+                  %span.month{:class => ('current' if Time.local(now.year, now.month) == Time.local(year, month))}= %w[Jan Feb Mar Apr May Jun Jul Aug Sep Oct Nov Dec][month - 1]
                   %ul.posts
                     - months[month].sort_by(&:date).reverse.each do |post|
                       %li
-                        = post.date.strftime("%d %b")
+                        %span.day{:class => ('current' if Time.local(now.year, now.month) == Time.local(year, month))}= post.date.day
                         %a.title{:href => post.url}= post.title
-
