Styled the posts index.

--- a/stylesheets/styles.sass
+++ b/stylesheets/styles.sass
@@ -54,6 +54,36 @@ p, .post ul, .comment ul, .post .meta
 div.item, .comment .meta
   padding-top: 0.85em
 
+ul.months
+  margin-bottom: 1.7em
+  border-bottom: #444 1px dashed
+ul.posts
+  padding-bottom: 0.85em
+  margin-bottom: 0.85em
+  border-bottom: #282828 1px dashed
+
+ul.years li:last-child ul.months, ul.months li:last-child ul.posts
+  border-bottom: none
+
+ul.years
+  padding: 0 0.5em
+  li
+    overflow: hidden
+  ul.months, ul.posts, a.title, span.year, span.month, span.day
+    display: block
+    float: left
+  ul.months
+    width: 35em
+  ul.posts
+    width: 30em
+  span.year, span.month, span.day
+    color: #777
+    &.current
+      opacity: 0
+    width: 5em
+  a.title
+    width: 25em
+
 .post .title
   padding-bottom: 0.85em
 
