Replaced the placeholder 'browse' link with twitter and github links.

--- a/_layouts/default.haml
+++ b/_layouts/default.haml
@@ -10,7 +10,8 @@
     %h1#page_heading
       %a{:href => '/'} ben hoskings
     #navigation
-      %a{:href => '/archives'} browse
+      %a{:href => 'http://twitter.com/ben_h'} twitter
+      %a{:href => 'http://github.com/benhoskings'} github
 
     #main= content
 
