--- a/_layouts/default.haml
+++ b/_layouts/default.haml
@@ -4,6 +4,7 @@
     %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-Type"}
     %title ben hoskings
     %link{:href => "/stylesheets/styles.css", :media => 'screen', :rel => 'stylesheet', :type => 'text/css'}
+    %link{:href => "/index.atom", :title => "Atom feed", :rel => "alternate", :type => "application/atom+xml"}
 
 %body
   #page_container
