--- a/stylesheets/styles.sass
+++ b/stylesheets/styles.sass
@@ -23,6 +23,13 @@ pre
   white-space: -o-pre-wrap
   word-wrap: break-word
 
+h1, h2, h3, h4, h5
+  color: #333333
+  font-size: 1em
+
+img
+  border: solid 1px #777
+
 #page_container
   width: 41em
   background-color: rgba(0,0,0,0.75)
@@ -35,24 +42,14 @@ ul
   &.years li
     list-style-type: none
 
-ol.commentlist, ul.archive-month, #navigation ul
-  list-style: none
-
-.meta ul
-  list-style: none
-  display: inline
-
-p, ul li, div.item
+p, ul li
   color: #aaa
-p, ul li, div.item
   text-shadow: #000 1px 1px 1px
 
-p, .post ul, .comment ul, .post .meta
+p, .post ul
   padding-top: 0.85em
+p, .post ul, .post .title
   padding-bottom: 0.85em
-
-div.item, .comment .meta
-  padding-top: 0.85em
 
 ul.months
   margin-bottom: 1.7em
@@ -84,12 +81,6 @@ ul.years
   a.title
     width: 25em
 
-.post .title
-  padding-bottom: 0.85em
-
-.archive-month a, #page_heading, h2
-  overflow: hidden
-
 #page_heading a
   display: block
   float: left
@@ -101,7 +92,6 @@ ul.years
 a
   color: #fe4892
   text-decoration: none
-
   &:hover
     background-color: #2b2b2b
 
@@ -118,153 +108,27 @@ code pre
 pre, input[type=text], textarea
   background-color: transparent
 
-div.item
-  overflow: hidden
-
-#page_heading, .post, #footer
+#page_heading, #navigation, .post, #footer
   margin: 1.7em 0
   padding: 1.7em 0
 
 #navigation
-  margin: 1.7em 0
-  padding: 1.7em 0
   padding-top: 0
 
 .post
   padding-top: 0
 
-.comment, .archive-month, .new_comment h2
-  margin: 1.7em 0
-
-.comment .meta
-  .author, .date
-    font-size: 0.8em
-    line-height: 2.125
-    color: #666
-    font-weight: bold
-
-.archives-index h3
-  font-size: 0.8em
-  line-height: 2.125
-  color: #666
-  font-weight: bold
-
-.errors
-  h3, li
-    font-size: 0.8em
-    line-height: 2.125
-    color: #666
-    font-weight: bold
-
-.new_comment h2
-  font-size: 0.8em
-  line-height: 2.125
-  color: #666
-  font-weight: bold
-
-#navigation
-  a, label
-    font-size: 0.8em
-    line-height: 2.125
-    color: #666
-    font-weight: bold
-
-  form
-    margin: 0
-    padding: 0
-
-  input
-    background-color: transparent
-    border: none
-    border-left: #444 1px solid
-    line-height: 2
-    font-size: 1em
-    color: #ddd
-    width: 12em
-
-input[type=text], textarea
-  line-height: 1.7
-  color: #bbb
-  border: #444 1px solid
-  margin-right: 0.5em
-
-.new_comment h2, .archives-index h3
-  padding-left: 0.75em
-  padding-right: 0.75em
-
-#navigation
-  a
-    padding-left: 0.75em
-    padding-right: 0.75em
-
-  form
-    float: right
-
-#footer, .meta li
+#footer
   font-size: 8pt
   color: #555
 
-#page_heading a, #footer, #main p, .post li, .comment li, .post h2, div.item, .archive-month a, code pre, .post .meta, .posts-index .meta, .comment .meta, .errors
+#page_heading a, #footer, #main p, .post li, .post h2, code pre
   padding-left: 0.6em
   padding-right: 0.6em
 
-.meta li, #main .entrybody li p
-  padding-left: 0
-  padding-right: 0
-
-.comment
-  background-color: rgba(255,255,255,0.11)
-
-  &.alt
-    background-color: rgba(255,255,255,0.07)
-
-.errors
-  background-color: rgba(255,20,40,0.2)
-
-h1#page_heading
-  font-size: 1em
-
-h2, h3, h4, h5
-  color: #333333
-  font-size: 1em
-
-img
-  border: solid 1px #777
-
-#navigation label
-  margin-left: 0
-  font-style: normal
-
-.archive-month .tags
-  color: #bbbbbb
-
-.meta ul li
-  display: inline
-
-  &:after
-    content: " | "
-
-  &:last-child:after
-    content: ""
-
-.separator
-  height: 1px
-  margin-top: 5px
-  clear: both
-
-#project_summary
-  height: 150px
-
-#new_comment
-  input[type=text], textarea
-    width: 61.8047%
-
-#edit_comment textarea
-  width: 61.8047%
-
-#new_comment textarea, #edit_comment textarea
-  float: left
-  height: 16em
-
-.fieldWithErrors
-  display: inline
+#navigation a
+  padding: 0 0.75em
+  font-size: 0.8em
+  line-height: 2.125
+  color: #666
+  font-weight: bold
