--- a/_layouts/default.haml
+++ b/_layouts/default.haml
@@ -11,8 +11,8 @@
     %h1#page_heading
       %a{:href => '/'} ben hoskings
     #navigation
-      %a{:href => 'http://twitter.com/ben_h'} twitter
-      %a{:href => 'http://github.com/benhoskings'} github
+      %a{:rel => 'me', :href => 'http://twitter.com/ben_h'} twitter
+      %a{:rel => 'me', :href => 'http://github.com/benhoskings'} github
 
     #main= content
 
