Added a span inside the footer, for styling.

--- a/_layouts/default.haml
+++ b/_layouts/default.haml
@@ -17,9 +17,10 @@
     = content
 
     %footer
-      Powered by
-      %a{:href => 'http://github.com/mojombo/jekyll'} Jekyll
-      Content &amp; layout &copy; Ben Hoskings.
+      %span
+        Powered by
+        %a{:href => 'http://github.com/mojombo/jekyll'} Jekyll
+        Content &amp; layout &copy; Ben Hoskings.
 
     :javascript
       var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
