Use : instead of = for mixin args.

--- a/stylesheets/styles.sass
+++ b/stylesheets/styles.sass
@@ -7,7 +7,7 @@ $border: $border-color 1px dotted
 $color: #444
 $background: #bbb
 
-@mixin radius($rad = 3px)
+@mixin radius($rad: 3px)
   -webkit-border-radius: $rad
   -moz-border-radius: $rad
   -o-border-radius: $rad
