Darkened link colour slightly.

--- a/stylesheets/styles.sass
+++ b/stylesheets/styles.sass
@@ -101,7 +101,7 @@ article header h1 a, ul.posts li a.title
   font-weight: bold
 
 a
-  color: #fe4892
+  color: #E13D87
   text-decoration: none
   &:hover
     background-color: #ccc
