Set #home bottom spacing to match header, nav, article & footer.

--- a/stylesheets/styles.sass
+++ b/stylesheets/styles.sass
@@ -139,6 +139,8 @@ article,
 footer
   padding-bottom: $margin
   margin-bottom: $margin
+#home
+  margin-bottom: $margin
 
 body > footer
   clear: both
