--- a/stylesheets/styles.sass
+++ b/stylesheets/styles.sass
@@ -162,7 +162,7 @@ nav
   a
     display: block
     float: left
-    width: $col / 0.8
+    width: ($col - $padding) / 0.8
     font-size: 0.8em
     padding-left: $padding / 0.8
     padding-bottom: ($margin * 2) / 0.8
