--- a/stylesheets/styles.sass
+++ b/stylesheets/styles.sass
@@ -1,7 +1,8 @@
 $width: 40em
+$leading: 1.5
+$margin: 1.5em
 $col: 4em
 $padding: 0.1em
-$margin: 1.7em
 $border-color: #777
 $border: $border-color 1px dotted
 $color: #444
@@ -20,7 +21,7 @@ $background: #bbb
 body
   color: black
   background-color: $background
-  font: 16px/1.7 'Helvetica Neue', arial, sans-serif
+  font: 16px/#{$leading} 'Helvetica Neue', arial, sans-serif
   font-weight: 200
   padding: 0
 
