Added left/right padding to the body, so the page doesn't sit flush when the viewport is too narrow.

--- a/stylesheets/styles.sass
+++ b/stylesheets/styles.sass
@@ -23,7 +23,7 @@ body
   background-color: $background
   font: 16px/#{$leading} 'Helvetica Neue', arial, sans-serif
   font-weight: 200
-  padding: 0
+  padding: 0 #{$leading / 2}em
 
 header, nav, article, footer
   display: block
