Added pubdate to articles.

--- a/_layouts/post.haml
+++ b/_layouts/post.haml
@@ -3,6 +3,7 @@ layout: default
 ---
 %article
   %header
+    %time{:pubdate => 'pubdate'}= page.date.strftime "%Y %B %e"
     %h1
       %a{:href => '/'}= page.title
   ~ content
