--- a/stylesheets/styles.sass
+++ b/stylesheets/styles.sass
@@ -114,7 +114,7 @@ a
   color: #E13D87
   text-decoration: none
   &:hover
-    background-color: #ccc
+    text-shadow: 0px 0px 5px white
 
 code
   color: $color - #111
