--- a/stylesheets/styles.sass
+++ b/stylesheets/styles.sass
@@ -77,9 +77,12 @@ article
     margin-bottom: $margin
   p, ul li
     color: $color
-  header time
-    color: $date-color
-    float: right
+  header
+    h1 a
+      display: block
+    time
+      color: $date-color
+      float: right
 
 ul.years
   li
