--- a/stylesheets/styles.sass
+++ b/stylesheets/styles.sass
@@ -136,11 +136,15 @@ code pre
 pre, input[type=text], textarea
   background-color: transparent
 
+hr
+  border: none
+
 body > header,
 nav,
 article,
 footer,
-#home
+#home,
+hr
   @include top-border
 
 body
