--- a/stylesheets/styles.sass
+++ b/stylesheets/styles.sass
@@ -78,11 +78,14 @@ article
   p, ul li
     color: $color
   header
-    h1 a
-      display: block
+    h1
+      font-size: 2em
+      a
+        display: block
     time
       color: $date-color
       float: right
+      padding-top: 1em
 
 ul.years
   li
