--- a/stylesheets/styles.sass
+++ b/stylesheets/styles.sass
@@ -57,6 +57,7 @@ h1, h2, h3, h4, h5
   font-size: 1em
 
 img
+  display: block
   border: solid 1px #777
   max-width: $width - 2
 
@@ -193,3 +194,11 @@ nav
     line-height: $leading / 0.8
     color: #666
     font-weight: bold
+
+.lightbox
+  position: fixed
+  top: 0
+  left: 0
+  bottom: 0
+  right: 0
+  background-color: #000
