Don't try to use original size images, since the URI can't just be b → o subbed.

--- a/_layouts/default.haml
+++ b/_layouts/default.haml
@@ -43,7 +43,7 @@
       
       $(function() {
         $('img').click(function() {
-          showFullSizeImage($(this).attr('src').replace(/b.jpg$/, 'o.jpg'));
+          showFullSizeImage($(this).attr('src'));
         });
       });
     
