--- a/_layouts/default.haml
+++ b/_layouts/default.haml
@@ -32,6 +32,28 @@
     %script{:src => "http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js", :type => "text/javascript"}
 
     :javascript
+      var positionLightbox = function() {
+        var padding = 10,
+            img = $('.lightbox img'),
+            pagewidth = $(window).width() - padding - padding,
+            pageheight = $(window).height() - padding - padding,
+            width = Math.min(pagewidth, img.width()),
+            height = Math.min(pageheight, img.height());
+
+        if (width / height > pagewidth / pageheight) {
+          img.css({
+            width: pagewidth
+          });
+        } else {
+          img.css({
+            width: pagewidth
+          });
+        }
+        img.css({
+          top: ((padding + (pageheight - height) / 2) + 'px'),
+          left: ((padding + (pagewidth - width) / 2) + 'px')
+        });
+      };
       var showFullSizeImage = function(uri) {
         $('.lightbox').remove();
         $('<div />').addClass('lightbox').append(
@@ -39,12 +61,13 @@
         ).appendTo('body').click(function() {
           $(this).remove();
         });
+        positionLightbox();
       };
-      
       $(function() {
         $('img').click(function() {
           showFullSizeImage($(this).attr('src'));
         });
+        $(window).resize(positionLightbox);
       });
     
     :javascript
