--- a/_layouts/default.haml
+++ b/_layouts/default.haml
@@ -29,7 +29,7 @@
         %a{:href => 'http://github.com/mojombo/jekyll'} Jekyll
         Content &amp; layout &copy; Ben Hoskings.
 
-    %script{:src => "http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js", :type => "text/javascript"}
+    %script{:src => "/scripts/jquery.js", :type => "text/javascript"}
 
     :javascript
       var positionLightbox = function() {
