Moved image JS from inline to images.js.

--- a/_layouts/default.haml
+++ b/_layouts/default.haml
@@ -30,46 +30,8 @@
         Content &amp; layout &copy; Ben Hoskings.
 
     %script{:src => "/scripts/jquery.js", :type => "text/javascript"}
+    %script{:src => "/scripts/images.js", :type => "text/javascript"}
 
-    :javascript
-      var positionLightbox = function() {
-        var padding = 10,
-            img = $('.lightbox img'),
-            pagewidth = $(window).width() - padding - padding,
-            pageheight = $(window).height() - padding - padding,
-            width = Math.min(pagewidth, img.width()),
-            height = Math.min(pageheight, img.height());
-
-        if (width / height > pagewidth / pageheight) {
-          img.css({
-            width: pagewidth
-          });
-        } else {
-          img.css({
-            width: pagewidth
-          });
-        }
-        img.css({
-          top: ((padding + (pageheight - height) / 2) + 'px'),
-          left: ((padding + (pagewidth - width) / 2) + 'px')
-        });
-      };
-      var showFullSizeImage = function(uri) {
-        $('.lightbox').remove();
-        $('<div />').addClass('lightbox').append(
-          $('<img />').addClass('original').attr('src', uri)
-        ).appendTo('body').click(function() {
-          $(this).remove();
-        });
-        positionLightbox();
-      };
-      $(function() {
-        $('img').click(function() {
-          showFullSizeImage($(this).attr('src'));
-        });
-        $(window).resize(positionLightbox);
-      });
-    
     :javascript
       var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
       document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
