--- a/stylesheets/styles.sass
+++ b/stylesheets/styles.sass
@@ -1,4 +1,5 @@
 $width: 640px
+$body_padding: 12px
 $leading: 1.5
 $margin: 1.5em
 $col: ($width / 10)
@@ -37,7 +38,7 @@ body
   background-color: $background
   font: 16px/#{$leading} 'Helvetica Neue', arial, sans-serif
   font-weight: 200
-  padding: 0 #{$leading / 2}em
+  padding: 0 $body_padding
 
 header, nav, article, footer
   display: block
