--- a/stylesheets/styles.sass
+++ b/stylesheets/styles.sass
@@ -206,6 +206,6 @@ nav
   left: 0
   bottom: 0
   right: 0
-  background-color: #000
+  background-color: rgba(0, 0, 0, 0.7)
   img
     position: absolute
