--- a/stylesheets/styles.sass
+++ b/stylesheets/styles.sass
@@ -40,6 +40,9 @@ body
   font-weight: 200
   padding: 0 $body_padding
 
+strong
+  font-weight: bold
+
 header, nav, article, footer
   display: block
 
