Fixed fixed width font-family list.

--- a/stylesheets/styles.sass
+++ b/stylesheets/styles.sass
@@ -47,7 +47,7 @@ header, nav, article, footer
   display: block
 
 input, textarea, pre, code
-  font-family: Menlo, Monaco, Consolas, sans-serif
+  font-family: Menlo, Monaco, Consolas, monospace
 
 pre
   white-space: pre-wrap
