Add Courier to the fixed font list, so it's used in preference to Courier New.

--- a/stylesheets/styles.sass
+++ b/stylesheets/styles.sass
@@ -47,7 +47,7 @@ header, nav, article, footer
   display: block
 
 input, textarea, pre, code
-  font-family: Menlo, Monaco, Consolas, monospace
+  font-family: Menlo, Monaco, Consolas, Courier, monospace
 
 pre
   white-space: pre-wrap
