Set input[type=text] to the standard fonts.

--- a/stylesheets/styles.sass
+++ b/stylesheets/styles.sass
@@ -48,6 +48,8 @@ header, nav, article, footer
 
 input, textarea, pre, code
   font-family: Inconsolata, Menlo, Monaco, Consolas, Courier, monospace
+input[type=submit]
+  font-family: 'Helvetica Neue', arial, sans-serif
 
 pre
   white-space: pre-wrap
