--- a/stylesheets/styles.sass
+++ b/stylesheets/styles.sass
@@ -48,6 +48,8 @@ header, nav, article, footer
 
 input, textarea, pre, code
   font-family: Inconsolata, Menlo, Monaco, Consolas, Courier, monospace
+input, textarea
+  font-size: 14px
 input[type=submit]
   font-family: 'Helvetica Neue', arial, sans-serif
 
