--- a/stylesheets/styles.sass
+++ b/stylesheets/styles.sass
@@ -93,6 +93,8 @@ article
     margin-bottom: $margin
   p, ul li
     color: $color
+  p:last-child
+    color: #fff
   header
     h1
       font-size: $heading_size
