Use the post's url on post titles, instead of /.

--- a/_layouts/post.haml
+++ b/_layouts/post.haml
@@ -5,5 +5,5 @@ layout: default
   %header
     %time{:pubdate => 'pubdate'}= page.date.strftime "%Y %B %e"
     %h1
-      %a{:href => '/'}= page.title
+      %a{href: page.url}= page.title
   ~ content
