Increase the leading and font size.

--- a/site/styles/styles.css.sass
+++ b/site/styles/styles.css.sass
@@ -1,7 +1,7 @@
 $width: 640px
 $body_padding: 12px
-$leading: 1.5
-$margin: 1.5em
+$leading: 1.6
+$margin: 1.6em
 $col: ($width / 10)
 $padding: 1px
 $heading_scale: 2
@@ -36,7 +36,7 @@ $background: #bbb
 body
   color: black
   background-color: $background
-  font: 16px/#{$leading} 'Helvetica Neue', arial, sans-serif
+  font: 18px/#{$leading} 'Helvetica Neue', arial, sans-serif
   font-weight: 200
   padding: 0 $body_padding
 
@@ -47,7 +47,7 @@ header, nav, article, footer
   display: block
 
 input, textarea, pre, code
-  font-family: Inconsolata, Menlo, Monaco, Consolas, Courier, monospace
+  font: 18px Menlo, Monaco, Consolas, Courier, monospace
 input, textarea
   font-size: 14px
 input[type=submit]
