--- a/site/_default.haml
+++ b/site/_default.haml
@@ -34,7 +34,7 @@
     %footer
       %span
         Powered by
-        %a{:href => 'http://github.com/mdub/pith'} pith
+        == #{link('http://github.com/mdub/pith', 'pith')}.
         Content &amp; layout &copy; Ben Hoskings.
 
     :javascript
