--- a/site/styles/styles.css.sass
+++ b/site/styles/styles.css.sass
@@ -7,7 +7,7 @@ $padding: 1px
 $border-color: #777
 $border: $border-color 1px dotted
 $color: #333
-$date-color: #777
+$meta-color: #777
 $background: #ccc
 
 @font-face
@@ -108,7 +108,7 @@ article
         padding-right: $padding
     time
       font: 14px/2 PixChicago
-      color: $date-color
+      color: $meta-color
       padding-left: 1em
 
 ul.years
@@ -132,7 +132,7 @@ ul.years
         margin-left: $col
         padding-left: $padding
   span.year, span.month, span.day
-    color: $date-color
+    color: $meta-color
     width: $col - $padding
     padding-left: $padding
 
@@ -207,7 +207,7 @@ nav
   a
     display: inline
     padding-left: $padding
-    color: #666
+    color: $meta-color
     font-weight: bold
 
 .lightbox
