--- a/site/styles/styles.css.sass
+++ b/site/styles/styles.css.sass
@@ -190,6 +190,12 @@ body
       display: inline
     a
       font: normal 14px/2 PixChicago
+  &.ben-hoskings >header
+    margin-top: $margin
+    margin-bottom: $margin * 3
+    h1 a
+      line-height: 1.4
+      font-size: 36px
 
 body > footer
   clear: both
