Make code blocks slightly lighter than the bg instead of slightly darker.

--- a/site/styles/styles.css.sass
+++ b/site/styles/styles.css.sass
@@ -147,7 +147,7 @@ code
   color: $color - #111
   font-size: 0.8em
   line-height: $leading
-  background-color: #bbb - #111
+  background-color: #ddd
   @include radius
   padding: 0 0.3em
   p &
