Format code inside li as inline-block, so they're padded properly like those iniside p.

--- a/site/styles/styles.css.sass
+++ b/site/styles/styles.css.sass
@@ -150,7 +150,7 @@ code
   background-color: #ddd
   @include radius
   padding: 0 0.3em
-  p &
+  p &, li &
     display: inline-block
   pre &
     display: block
