Switch to a serif typeface: Vollkorn.

--- a/site/styles/styles.css.sass
+++ b/site/styles/styles.css.sass
@@ -1,7 +1,7 @@
 $width: 640px
 $body_padding: 12px
-$leading: 1.6
-$margin: 1.6em
+$leading: 1.8
+$margin: 1.8em
 $col: ($width / 10)
 $padding: 1px
 $border-color: #777
@@ -40,8 +40,7 @@ $background: #ccc
 body
   color: black
   background-color: $background
-  font: 18px/#{$leading} 'Helvetica Neue', arial, sans-serif
-  font-weight: 200
+  font: 16px/#{$leading} Vollkorn, serif
   padding: 0 $body_padding
 
 strong
