--- a/site/_default.haml
+++ b/site/_default.haml
@@ -6,6 +6,7 @@
     %title ben hoskings
     %link{:href => href("/styles/styles.css"), :media => 'screen', :rel => 'stylesheet', :type => 'text/css'}
     %link{:href => href("/index.atom"), :title => "Atom feed", :rel => "alternate", :type => "application/atom+xml"}
+    %link{:href => 'http://fonts.googleapis.com/css?family=Vollkorn:400italic,700italic,400,700', :rel => 'stylesheet', :type => 'text/css'}
 
     :javascript
       /**
