Larger footer, with the standard type color.

--- a/site/styles/styles.css.sass
+++ b/site/styles/styles.css.sass
@@ -198,9 +198,9 @@ body
 
 body > footer
   clear: both
-  color: #555
+  color: $color
   span
-    font-size: 0.7em
+    font-size: 0.8em
     padding-left: $padding
     padding-right: $padding
 
