A less darkened background on link hover.

--- a/site/styles/styles.css.sass
+++ b/site/styles/styles.css.sass
@@ -140,7 +140,7 @@ a
   color: #E13D87
   text-decoration: none
   &:hover
-    background-color: #aaa
+    background-color: darken($background, 5%)
 
 code
   color: $color - #111
