--- a/site/styles/styles.css.sass
+++ b/site/styles/styles.css.sass
@@ -7,6 +7,8 @@ $padding: 1px
 $border-color: #777
 $border: $border-color 1px dotted
 $color: #333
+$link-color: #e13d87
+$title-color: #197a9f
 $date-color: #777
 $meta-color: #999
 $background: #ccc
@@ -133,11 +135,12 @@ ul.years
     width: $col - $padding
     padding-left: $padding
 
-article header h1 a, ul.posts li a.title
-  color: #197a9f
+article header h1 a,
+ul.posts li a.title
+  color: $title-color
 
 a
-  color: #E13D87
+  color: $link-color
   text-decoration: none
   &:hover
     background-color: darken($background, 5%)
