--- a/site/_default.haml
+++ b/site/_default.haml
@@ -40,11 +40,14 @@
     :javascript
       head.js("/scripts/jquery.js");
       head.js("/scripts/images.js");
-
+    
     :javascript
-      var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-      document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-      try {
-        var pageTracker = _gat._getTracker("UA-9740324-2");
-        pageTracker._trackPageview();
-      } catch(err) {}
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-9740324-2']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
