Float the 'powered by pith' text right in the footer.

--- a/site/_default.haml
+++ b/site/_default.haml
@@ -32,9 +32,10 @@
     = yield
 
     %footer
-      %span
+      %span.powered_by
         Powered by
         %a{href: 'http://github.com/mdub/pith'} pith
+      %span.copyright
         Content &amp; layout &copy; Ben Hoskings.
 
     :javascript
