Linkify my name in the footer.

--- a/site/_default.haml
+++ b/site/_default.haml
@@ -36,7 +36,8 @@
         Powered by
         %a{href: 'http://github.com/mdub/pith'} pith
       %span.copyright
-        Content &amp; layout &copy; Ben Hoskings.
+        Content &amp; layout &copy;
+        %a{href: 'mailto:ben@hoskings.net'} Ben Hoskings
 
     :javascript
       head.js("/scripts/jquery.js");
