--- a/site/styles/styles.css.sass
+++ b/site/styles/styles.css.sass
@@ -88,7 +88,7 @@ footer,
 ul
   list-style: inside
   li
-    list-style-type: square
+    list-style-type: circle
   &.years li
     list-style-type: none
 
