Align ol list markers inside, like ul.

--- a/site/styles/styles.css.sass
+++ b/site/styles/styles.css.sass
@@ -85,8 +85,11 @@ footer,
   width: $width
   margin: 0 auto
 
-ul
+ul,
+ol
   list-style: inside
+
+ul
   li
     list-style-type: circle
   &.years li
