Style asides, in italic.

--- a/site/styles/styles.css.sass
+++ b/site/styles/styles.css.sass
@@ -98,8 +98,10 @@ ul
 article
   p, ul, ol, pre
     margin-bottom: $margin
-  p, li
+  p, li, aside
     color: $color
+  aside
+    font-style: italic
   header
     h1
       font: 24px/2 PixChicago
