Set code blocks a bit tighter.

--- a/site/styles/styles.css.sass
+++ b/site/styles/styles.css.sass
@@ -171,7 +171,7 @@ a
 code
   color: $color - #111
   font-size: 0.8em
-  line-height: $leading
+  line-height: 22px
   background-color: #ddd
   @include radius
   padding: 0 0.3em
