New design, with a lefthand body column, floated asides and figcaptions, and no background colours on code snippets.

--- a/site/_post.haml
+++ b/site/_post.haml
@@ -5,4 +5,5 @@ layout: "/_default.haml"
   %header
     %h1= link(page, formatted_headline_for(page.title))
     %time{:pubdate => 'pubdate'}= date_of(page).strftime "%Y/%m/%d"
-  ~ yield
+  .body
+    ~ yield
