--- a/site/styles/styles.css.sass
+++ b/site/styles/styles.css.sass
@@ -1,4 +1,6 @@
-$width: 640px
+$width: 720px
+$article-width: $width * 0.67
+$aside-width: $width * 0.33
 $body_padding: 12px
 $leading: 28px
 $margin: 1.8em
@@ -75,12 +77,13 @@ img
   margin: -1px
   article &
     max-width: $width
+    clear: both
     &.lightboxable:hover
       cursor: pointer
 
 header,
-article,
 footer,
+article,
 #home
   width: $width
   margin: 0 auto
@@ -109,12 +112,6 @@ ul
     left: -16px
 
 article
-  p, ul, ol, pre
-    margin-bottom: $margin
-  p, li, aside
-    color: $color
-  aside
-    font-style: italic
   header
     h1
       font: 24px/2 PixChicago
@@ -127,6 +124,41 @@ article
       font: 14px/2 PixChicago
       color: $date-color
       padding-left: 1em
+  .body
+    p, ul, ol, pre
+      margin-bottom: $margin
+      width: $article-width
+    p, li, figure, aside
+      color: $color
+    figure
+      @include top-border
+      margin-bottom: $margin
+      position: relative
+      pre code
+        padding: 0 0.2em
+      figcaption
+        font-size: 14px
+        line-height: 22px
+        position: absolute
+        top: 2px
+        left: $article-width
+    figure figcaption,
+    aside
+      margin-bottom: $margin
+      width: $aside-width
+      padding-left: $leading * 2
+      box-sizing: border-box
+    aside
+      font-size: 14px
+      float: right
+      clear: right
+      padding-left: $leading * 2
+      box-sizing: border-box
+      p
+        width: auto
+    aside
+      font-style: italic
+
 
 ul.years
   li
@@ -168,14 +200,14 @@ a
 
 code
   color: $color - #111
-  font-size: 0.8em
+  font-size: 0.9em
   line-height: 22px
-  background-color: #ddd
   @include radius
-  padding: 0 0.3em
   p &, li &
-    display: inline-block
+    font-weight: bold
+    white-space: nowrap
   pre &
+    font-size: 0.8em
     display: block
 
 code pre
@@ -186,10 +218,11 @@ pre, input[type=text], textarea
 
 hr
   border: none
+  clear: both
 
 body > header,
 article,
-article header + p,
+article .body,
 footer,
 #home,
 hr
