Apply syntax highlighting to all 'pre code' blocks within articles, not just within figures.

--- a/site/styles/styles.css.sass
+++ b/site/styles/styles.css.sass
@@ -151,13 +151,15 @@ article
       width: $article-width
     p, li, figure, aside
       color: $color
+    pre
+      code
+        @include syntax-highlighting
     figure
       @include top-border
       margin-bottom: $margin
       position: relative
       pre code
         padding: 0 0.2em
-        @include syntax-highlighting
       figcaption
         font-size: 14px
         line-height: 22px
