Extend pre blocks to full width, and clear them.

--- a/site/styles/styles.css.sass
+++ b/site/styles/styles.css.sass
@@ -148,7 +148,10 @@ article
   .body
     p, ul, ol, pre
       margin-bottom: $margin
+    p, ul, ol
       width: $article-width
+    >pre
+      clear: both
     p, li, figure, aside
       color: $color
     pre
